--- a/Sankey diagram/Sankey diagram (plotly).ipynb
+++ b/Sankey diagram/Sankey diagram (plotly).ipynb
@@ -7,14 +7,14 @@
    },
    "source": [
     "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"></ul></div>"
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Sankey-Digrams\" data-toc-modified-id=\"Sankey-Digrams-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Sankey Digrams</a></span></li></ul></div>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###Sankey Digrams \n",
+    "# Sankey Digrams \n",
     "\n",
     "Resources\n",
     "\n",
@@ -27,25 +27,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-09-19T10:03:08.501782Z",
-     "start_time": "2020-09-19T10:03:07.449555Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-09-19T10:03:13.498563Z",
-     "start_time": "2020-09-19T10:03:13.455613Z"
+     "end_time": "2021-09-17T07:17:56.731963Z",
+     "start_time": "2021-09-17T07:17:56.700058Z"
     }
    },
    "outputs": [
@@ -247,20 +233,27 @@
        "10               NaN      3  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv(r\"C:\\Users\\ALIENWARE\\OneDrive\\Python\\CSV\\sankey_digram_test_data.csv\")\n",
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.read_csv(\"data\\sankey_digram_test_data.csv\") # r\"C:\\Users\\ALIENWARE\\OneDrive\\Python\\CSV\\sankey_digram_test_data.csv\"\n",
     "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-09-17T07:18:00.859482Z",
+     "start_time": "2021-09-17T07:18:00.837463Z"
+    }
+   },
    "outputs": [],
    "source": [
     "def genSankey(df,cat_cols=[],value_cols='',title='Sankey Diagram'):\n",
@@ -329,8 +322,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-09-17T07:19:17.014641Z",
+     "start_time": "2021-09-17T07:18:18.866187Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting plotly\n",
+      "  Downloading plotly-5.3.1-py2.py3-none-any.whl (23.9 MB)\n",
+      "Requirement already satisfied: six in c:\\users\\public\\anaconda3\\lib\\site-packages (from plotly) (1.15.0)\n",
+      "Collecting tenacity>=6.2.0\n",
+      "  Downloading tenacity-8.0.1-py3-none-any.whl (24 kB)\n",
+      "Installing collected packages: tenacity, plotly\n",
+      "Successfully installed plotly-5.3.1 tenacity-8.0.1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ! pip install plotly"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-09-17T07:20:59.772861Z",
+     "start_time": "2021-09-17T07:20:55.865697Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting chart_studio\n",
+      "  Downloading chart_studio-1.1.0-py3-none-any.whl (64 kB)\n",
+      "Requirement already satisfied: six in c:\\users\\public\\anaconda3\\lib\\site-packages (from chart_studio) (1.15.0)\n",
+      "Requirement already satisfied: requests in c:\\users\\public\\anaconda3\\lib\\site-packages (from chart_studio) (2.24.0)\n",
+      "Processing c:\\users\\windows pc\\appdata\\local\\pip\\cache\\wheels\\c4\\a7\\48\\0a434133f6d56e878ca511c0e6c38326907c0792f67b476e56\\retrying-1.3.3-py3-none-any.whl\n",
+      "Requirement already satisfied: plotly in c:\\users\\public\\anaconda3\\lib\\site-packages (from chart_studio) (5.3.1)\n",
+      "Requirement already satisfied: idna<3,>=2.5 in c:\\users\\public\\anaconda3\\lib\\site-packages (from requests->chart_studio) (2.10)\n",
+      "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in c:\\users\\public\\anaconda3\\lib\\site-packages (from requests->chart_studio) (1.25.9)\n",
+      "Requirement already satisfied: chardet<4,>=3.0.2 in c:\\users\\public\\anaconda3\\lib\\site-packages (from requests->chart_studio) (3.0.4)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\public\\anaconda3\\lib\\site-packages (from requests->chart_studio) (2021.5.30)\n",
+      "Requirement already satisfied: tenacity>=6.2.0 in c:\\users\\public\\anaconda3\\lib\\site-packages (from plotly->chart_studio) (8.0.1)\n",
+      "Installing collected packages: retrying, chart-studio\n",
+      "Successfully installed chart-studio-1.1.0 retrying-1.3.3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ! pip install chart_studio"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-09-17T07:21:36.493947Z",
+     "start_time": "2021-09-17T07:21:36.385069Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -338,7 +398,7 @@
        "'temp-plot.html'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -439,6 +499,7 @@
   }
  ],
  "metadata": {
+  "hide_input": false,
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -454,7 +515,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.5"
   },
   "toc": {
    "base_numbering": 1,
